# demlabs_shop

./: .env  .env.docker  .env.local  .env.test  .gitignore  Dockerfile  alembic.ini  docker-compose-local.yaml  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml  redis.conf
app/: asgi.py  config.py  main.py
app/auth/: config.py  exception_messages.py  router.py  schemas.py  service.py
app/auth/utils/: jwt.py  token_payload.py  user_authentication.py
app/carts/: models.py  repository.py  router.py  schemas.py
app/categories/: models.py  repository.py  router.py  schemas.py  service.py
app/containers/api/: app.py  gateways.py  providers.py  repositories.py  services.py  wires.py
app/core/: configs.py
app/core/cache/: base.py  config.py
app/core/db/: __init__.py  base.py  columns.py  config.py  exceptions_types.py  models.py
app/core/middlewares/: config.py
app/core/repository/: base.py  schemas_types.py
app/core/service/: base.py
app/dependencies/: jwt_validation.py  user_authentication.py
app/models/: carts.py  categories.py  products.py  users.py
app/products/: cache.py  exception_messages.py  models.py  repository.py  router.py  schemas.py  service.py
app/registrations/: router.py  schemas.py  service.py
app/repositories/: carts.py  categories.py  products.py  users.py
app/resources/categories/: __init__.py  strings.py
app/resources/products/: __init__.py
app/resources/users/: __init__.py  strings.py
app/schemas/requests/: auth.py  carts.py  (+3 more)
app/services/: auth.py  carts.py  categories.py  jwt.py  password.py  product.py  registration.py  user.py
app/users/: exception_messages.py  models.py  repository.py  schemas.py  service.py
app/utils/: schemas.py
app/views/: __init__.py  auth.py  carts.py  categories.py  products.py  registrations.py
certificates/: jwt-private.pem  jwt-public.pem
docker/: app.sh
docker/redis/: Dockerfile  init.sh
migrations/: env.py
migrations/versions/: 2024-06-14-06-32-17_7721f659a7d3_add_tables.py  2024-06-14-06-47-33_cf67ee7838f5_.py  2024-06-19-14-03-49_45e71f196364_add_all_tables.py
secrets/redis/: redis_password.txt
tests/: conftest.py
(+13 files in other folders)
