[tool.poetry]
name = "demlabs"
version = "0.1.0"
description = ""
authors = ["Pavel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
phonenumbers = "^8.13.40"
pydantic-settings = "^2.3.4"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
gunicorn = "^22.0.0"
dishka = "^1.2.0"
asyncpg = "^0.29.0"
returns = "^0.23.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
redis = "^5.0.7"
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"
polyfactory = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# TODO: настроить полностью pytest.
[tool.pytest.ini_options]
pythonpath = [
  ".", "app",
]
asyncio_mode="auto"